# emo-rs

./: .gitignore  Cargo.toml  README.md  build.rs  build_dll.bat
c/lua/: linit.c
c/luafilesystem/: lfs_install.h
examples/: repl.rs
lua/: lctype.h
lua_lib/: shuffle.lua
lua_script/: hello.lua  init.lua  main_loop.lua  response.lua
recipe/: idea.md  recipe.pasta  sample.lua  sample.pasta
script.new1/dic/: actor_murasaki.lua
script.new1/emo/: entry.lua  event.lua  global_dic.lua  main_loop.lua  response.lua  utils.lua
script.new1/emo/concept/: sample.lua
script.new1/emo/emo/: init.lua
script.new1/emo/emo/events/: init.lua
script.new1/test/: start_test.lua
script.new2/dic/: config.lua  init.lua  neta_murasaki.lua  talk001.lua  talk002.lua
script.new2/dic_old/talks/: cal.lua  co_talk.lua  event.lua  init.lua  normal.lua  util_emo.lua  util_murasaki.lua  word.lua  word_dic.lua
script.new2/emo/emo/dic/: actor.lua  entry.lua  event.lua  init.lua  local_entry.lua  (+5 more)
script.new2/emo/libs/: luajit-utf8.lua
script.new2/emo/shiori/: cal_time.lua  entry_time.lua  has_talk.lua  main_loop.lua  response.lua  utils.lua
script.new2/test/: start_test.lua
script.new2/test/test/: dic.lua  entry_time.lua  hello.lua  init.lua  response.lua  sakura_script.lua  test_actor.lua  wait_str.lua
script.old/emo/shiori/: init.lua
script.old/emo/talks/: o.lua  単語集.csv  単語集.xlsx
script.old/test/: start_test.lua
script/dic/: actor_emo.lua  actor_murasaki.lua  concept.lua  conf.lua  init.lua  save.lua
script/emo/: actor.lua  dic.lua  entry.lua  hello.lua  main_loop.lua  readme.md  reg.lua  reg_system.lua  save.lua  scene.lua  session.lua  stage.lua  talk.lua  utf8.lua  version.lua  wait.lua  world.lua
script/emo/concept/: actor.lua
script/emo/emo/: env.lua  save.lua
script/emo/events/: fire_request.lua  init.lua  no_entry.lua  talk.lua  talk_event.lua
script/emo/libs/: cts.lua
script/emo/shiori/: cal_time.lua  cts.lua  insert_wait.lua  main_loop.lua  request.lua  response.lua  utils.lua
script/emo/talks/: cal_time.lua  dkit.lua  o.lua  stage.lua  wait.lua  word.lua
script/profile/emo/: save.txt
script/shiori/: init.lua  main_loop.lua  response.lua  utils.lua
script/shiori/events/: fire_request.lua  init.lua  no_entry.lua  on_secound_change.lua  talk_normal.lua
script/src/shiori/: main_loop.lua
script/test/: init.lua  shiori.lua  start_test.lua
script/test/shiori/: event.lua  response.lua
src/: error.rs  error_old.rs  function.rs  lib.rs  lua_funcs.rs  lua_path.rs  lua_request.rs  lua_tests.rs  parse_req.rs  path.rs  prelude.rs  shiori.rs  utils.rs  windows.rs
src/api/: api.rs  di.rs  error.rs  mod.rs  readme.md  windows.rs
src/hglobal/: enc.rs  error.rs  mod.rs
src/shiori_parser/: error.rs  mod.rs  req.rs  req_parser.rs
(+30 files in other folders)
